--- a/sass/blocks/_base.scss
+++ b/sass/blocks/_base.scss
@@ -2,13 +2,22 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: $fontSize;
+}
+
+html,
+body {
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: "Alegreya Sans", "Arial", sans-serif;
     line-height: 1.42;
-    font-size: $fontSize;
+    
     color: #666666;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -36,13 +45,12 @@ ul li {
 .wrapper {
     position: relative;
     width: 100%;
-    min-width: $containerWidth + 20px;
     min-height: 100%;
     overflow: hidden;
 }
 
 .container {
-    width: $containerWidth;
+    max-width: $containerWidth;
     margin: auto;
 }
 
