--- a/sass/blocks/_advantages.scss
+++ b/sass/blocks/_advantages.scss
@@ -3,6 +3,10 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+
+    @include tablets {
+        display: none;
+      }
 }
 
 .advantages__item {
