--- a/sass/blocks/_base.scss
+++ b/sass/blocks/_base.scss
@@ -4,6 +4,14 @@
 
 html {
     font-size: $fontSize;
+
+    @include tablets {
+        font-size: $fontSize - 1px;
+    }
+
+    @include phones {
+        font-size: $fontSize - 2px;
+    }
 }
 
 html,
@@ -31,6 +39,7 @@ h1,h2,h3,h4,h5,h6, p {
 a {
     color: inherit;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 ul {
@@ -50,6 +59,7 @@ ul li {
 }
 
 .container {
+    width: 95%;
     max-width: $containerWidth;
     margin: auto;
 }
